Get rid of Long constructor instantiation.